fix grid alignments

--- a/portfolio.css
+++ b/portfolio.css
@@ -5,7 +5,7 @@
     list-style: none;
 }
 :root{
-    --padding-total:15px 25px;
+    --padding-total:20px 25px;
 }
 h2{
     font-family: "Poppins" ,sans-serif;
@@ -37,6 +37,7 @@ header{
 }
 nav{
     width: 1300px;
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -59,15 +60,20 @@ nav ul li:hover{
     border-bottom:3px solid rgb(47, 118, 211);
     color: rgb(47, 118, 211);
 }
-
+#menu-bar{
+    position: absolute;
+    display: none;
+    right: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 40px;
+    cursor: pointer;
+}
 .container .Home{
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 500px;
-}
-#home, #about , #skills , #contact{
-    height:100vh ;
 }
 .intro-text {
    flex: 1;
@@ -152,6 +158,7 @@ nav ul li:hover{
     gap: 10px;
     align-items: center;
     padding: var(--padding-total);
+    height: 200px;
 }
 .skills-icons{
     display: flex;
@@ -235,15 +242,16 @@ nav ul li:hover{
 }
 .container-projects{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(3,1fr);
+    justify-content: space-around;
     gap: 25px;
     padding: 10px 20px;
     margin-top: 20px;
 }
 .box-project{
     position: relative;
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -301,9 +309,14 @@ nav ul li:hover{
 /* contact section */
 .contact{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: var(--padding-total);
+}
+.contact h2{
+    text-align: center;
+    margin: 20px;
 }
 .form-contact{
     display: grid;
@@ -384,9 +397,6 @@ nav ul li:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-   
-
-    
 }
 .informations{
     width: 90%;
@@ -441,5 +451,51 @@ nav ul li:hover{
     color:#333;
     font-size: 25px;
     font-weight: bold;
+}
+@media (max-width:1080px){
+    .container-projects{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media (max-width:768px){
+    .navbar ul{
+        display: none;
+    }
+    #menu-bar{
+        display: block;
+    }
+    .home-image{
+        display: none;
+    }
+    .intro-text{
+        max-width: 100%;
+        display:flex ;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid #333;
+        padding: 5px, 25px;
+        text-align: center;
+    }
+    .About{
+        text-align: center;
+        padding: 0 ,20px;
+    }
+    .container-projects{
+        grid-template-columns: 1fr;
+    }
+    .box-project , .box-project img{
+        width: 400px;
+        height: 400px;
+    }
+    .container-info{
+        display: none;
+    }
+    .form-contact{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+   
 }
 
